Bug fix for shopping cart icon on Safari take two

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -87,14 +87,16 @@ h3 {
         position: absolute;
         left: 12px;
         bottom: 12px;
+        width: 36px;
+        height: 30px;
+        padding: 3px;
         background: white;
         box-shadow: 0 0 6px grey;
         cursor: pointer;
 
         img {
             width: 30px;
-            height: 30px;
-            padding: 3px;
+            height: 24px;
         }
     }
 }
@@ -248,10 +250,13 @@ h3 {
         left: auto;
         right: 0;
         bottom: -60px;
+        width: 48px;
+        height: 42px;
+        padding: 6px;
 
         img {
             width: 36px;
-            height: 36px;
+            height: 30px;
         }
     }
 
