--- a/styles/style.css
+++ b/styles/style.css
@@ -622,6 +622,9 @@ h3::after {
   position: absolute;
   left: 12px;
   bottom: 12px;
+  width: 36px;
+  height: 30px;
+  padding: 3px;
   background: white;
   -webkit-box-shadow: 0 0 6px grey;
           box-shadow: 0 0 6px grey;
@@ -629,8 +632,7 @@ h3::after {
 }
 .product-image button img {
   width: 30px;
-  height: 30px;
-  padding: 3px;
+  height: 24px;
 }
 
 .price {
@@ -887,10 +889,13 @@ h3::after {
     left: auto;
     right: 0;
     bottom: -60px;
+    width: 48px;
+    height: 42px;
+    padding: 6px;
   }
   .product-image button img {
     width: 36px;
-    height: 36px;
+    height: 30px;
   }
   .collections .collection1,
   .collections .collection4 {
